name:                table-visualizer
version:             0.0.0.0
synopsis:            This tool draw table diagram.
description:         This tool draw table diagram.
homepage:            http://github.com/mathfur/table-visualizer/
license:             MIT
author:              mathfur
maintainer:          mathfur
-- copyright:
category:            Graphics
build-type:          Simple
cabal-version:       >=1.14
stability:           experimental

executable table-visualizer
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:       base ==4.5.*, hspec ==1.4.3.*, QuickCheck ==2.6.*, text, mtl ==2.1.*, transformers ==0.3.*
  ghc-options: -Wall
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: src, spec
  ghc-options: -Wall
  build-depends: base, hspec ==1.4.3.*, QuickCheck ==2.6.*, text, mtl ==2.1.*, transformers ==0.3.*
  default-language:    Haskell2010
