name:                table-visualizer
version:             0.0.0.0
synopsis:            This tool draw table diagram.
description:         This tool draw table diagram.
homepage:            http://github.com/mathfur/table-visualizer/
license:             MIT
author:              mathfur
maintainer:          mathfur
-- copyright:
category:            Graphics
build-type:          Simple
cabal-version:       >=1.14
stability:           experimental

executable table-visualizer
  main-is: Main.hs
  hs-source-dirs: src
  build-depends: base ==4.5.*
               , hspec ==1.4.3.*
               , QuickCheck ==2.6.*
               , mtl ==2.1.*
               , transformers ==0.3.*
               , yesod                         >= 1.1.5      && < 1.2
               , yesod-core                    >= 1.1.7      && < 1.2
               , yesod-auth                    >= 1.1        && < 1.2
               , yesod-static                  >= 1.1        && < 1.2
               , yesod-default                 >= 1.1        && < 1.2
               , yesod-form                    >= 1.1        && < 1.3
               , clientsession                 >= 0.8        && < 0.10
               , bytestring                    >= 0.9        && < 0.11
               , text                          >= 0.11       && < 0.12
               , persistent                    >= 1.1        && < 1.2
               , persistent-sqlite             >= 1.1        && < 1.2
               , persistent-template           >= 1.1.1      && < 1.2
               , template-haskell
               , hamlet                        >= 1.1        && < 1.2
               , shakespeare-css               >= 1.0        && < 1.1
               , shakespeare-js                >= 1.0.2      && < 1.2
               , shakespeare-text              >= 1.0        && < 1.1
               , hjsmin                        >= 0.1        && < 0.2
               , monad-control                 >= 0.3        && < 0.4
               , wai-extra                     >= 1.3        && < 1.4
               , yaml                          >= 0.8        && < 0.9
               , http-conduit                  >= 1.8        && < 1.10
               , directory                     >= 1.1        && < 1.3
               , warp                          >= 1.3        && < 1.4
               , data-default
               , aeson
               , conduit                       >= 1.0
               , monad-logger                  >= 0.3
               , fast-logger                   >= 0.3
  ghc-options: -Wall
  extensions: TemplateHaskell
              QuasiQuotes
              OverloadedStrings
              NoImplicitPrelude
              CPP
              MultiParamTypeClasses
              TypeFamilies
              GADTs
              GeneralizedNewtypeDeriving
              FlexibleContexts
              EmptyDataDecls
              NoMonomorphismRestriction
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: src, spec
  ghc-options: -Wall
  build-depends: base
               , hspec ==1.4.3.*
               , QuickCheck ==2.6.*
               , text
               , mtl ==2.1.*
               , transformers ==0.3.*
  default-language:    Haskell2010
